templates/ibm-ep-operator_template.yaml
---
# Source: ibm-ep-operator/templates/webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibm-ep-operator
  labels:
    
    helm.sh/chart: ibm-ep-operator-1.1.5
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-event-processing
    app.kubernetes.io/instance: ibm-ep-operator
    app.kubernetes.io/version: "1.1.5"
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    
    app.kubernetes.io/name: ibm-event-processing
    app.kubernetes.io/instance: ibm-ep-operator
---
# Source: ibm-ep-operator/templates/deployment.yaml
###############################################################################
#
# © Copyright IBM Corp. 2023
#
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibm-ep-operator
  labels:
    
    helm.sh/chart: ibm-ep-operator-1.1.5
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-event-processing
    app.kubernetes.io/instance: ibm-ep-operator
    app.kubernetes.io/version: "1.1.5"
  annotations:
    productID: "682b6db3fed247a098d85da5ab905b46"
    productName: "IBM Event Automation"
    productVersion: "1.1.5"
    productMetric: "FREE"
    productChargedContainers: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ibm-event-processing
      app.kubernetes.io/instance: ibm-ep-operator
  template:
    metadata:
      labels:
        
        helm.sh/chart: ibm-ep-operator-1.1.5
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: ibm-event-processing
        app.kubernetes.io/instance: ibm-ep-operator
        app.kubernetes.io/version: "1.1.5"
      annotations:
        productID: "682b6db3fed247a098d85da5ab905b46"
        productName: "IBM Event Automation"
        productVersion: "1.1.5"
        productMetric: "FREE"
        productChargedContainers: ""
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - s390x
      serviceAccountName: ibm-ep-operator
      securityContext:
        runAsNonRoot: true
      containers:
        - name: ibm-ep-operator
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          image: icr.io/cpopen/ibm-eventprocessing-operator@sha256:fd0fe86ba176c58881a6f05b4e24eb77a421f03d072adafc74fce48ae0e087da
          imagePullPolicy: Always
          volumeMounts:
          - name: webhook-certs
            mountPath: /tmp/k8s-webhook-server/serving-certs
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
              ephemeral-storage: 500M
            requests:
              cpu: 200m
              memory: 256Mi
              ephemeral-storage: 500M
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 5555
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 5555
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: webhook-certs
          secret:
            secretName: ibm-ep-operator-webhook
---
# Source: ibm-ep-operator/templates/clusterserviceversion.yaml
###############################################################################
#
# © Copyright IBM Corp. 2023
#
###############################################################################
---
# Source: ibm-ep-operator/templates/webhook.yaml
###############################################################################
#
# © Copyright IBM Corp. 2023
#
###############################################################################
---
# Source: ibm-ep-operator/templates/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: ibm-ep-operator-default
  labels:
    
    helm.sh/chart: ibm-ep-operator-1.1.5
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-event-processing
    app.kubernetes.io/instance: ibm-ep-operator
    app.kubernetes.io/version: "1.1.5"
  annotations:
    cert-manager.io/inject-ca-from: default/ibm-ep-operator-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-ep-operator
      namespace: default
      path: /validate-events-ibm-com-v1beta1-eventprocessing
  failurePolicy: Fail
  name: eventprocessing.events.ibm.com
  rules:
  - apiGroups:
    - events.ibm.com
    apiVersions:
    - v1beta1
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - eventprocessings
    scope: "Namespaced"
  sideEffects: None
  namespaceSelector:
    matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: In
        values: [ "default"]
